--- a/data/io.github.david_swift.Scripter.desktop
+++ b/data/io.github.david_swift.Scripter.desktop
@@ -2,10 +2,10 @@
 Version=1.0
 Type=Application
 
-Name=Scripter
+Name=JScripter
 Comment=A very simple editor for very simple Python scripts
 Categories=Development;GNOME;
 
 Icon=io.github.david_swift.Scripter
-Exec=Scripter
+Exec=JScripter
 Terminal=false
