--- a/data/io.github.david_swift.Scripter.desktop
+++ b/data/io.github.david_swift.Scripter.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 
 Name=JScripter
-Comment=A very simple editor for very simple Python scripts
+Comment=A very simple editor for very simple JavaSript scripts
 Categories=Development;GNOME;
 
 Icon=io.github.david_swift.Scripter
