--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ DerivedData/
 .swiftpm/config/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+*.deb
+notes
+deb/
